--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -15,13 +15,10 @@
     ></nb-tab>
   </nb-tabset>
 
-  <nb-select
-    class="header--select-theme"
-    [selected]="selectedTheme"
-    (selectedChange)="themeSelected.emit($event)"
-  >
-    <nb-option *ngFor="let theme of themes" [value]="theme.theme">{{
-      theme.label
-    }}</nb-option>
-  </nb-select>
+  <nd-theme-select
+    class="header--theme-container"
+    [selectedTheme]="selectedTheme"
+    [themes]="themes"
+    (themeSelected)="themeSelected.emit($event)"
+  ></nd-theme-select>
 </div>
