--- a/src/app/shared/components/menu-sidebar/menu-sidebar.component.scss
+++ b/src/app/shared/components/menu-sidebar/menu-sidebar.component.scss
@@ -2,21 +2,23 @@
 @import '../../../../animations';
 
 @include nb-install-component() {
-
   #menu-sidebar {
-
     .menu-container {
       background: nb-theme(background-basic-color-2);
     }
   }
+
+  .menu--theme-container {
+    color: nb-theme(text-basic-color);
+  }
 }
 
 #menu-sidebar {
-  background: rgba(0,0,0,0.7);
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
   z-index: 10000;
   animation-duration: 500ms;
@@ -32,7 +34,7 @@
 
   .menu-container {
     display: flex;
-    justify-content: flex-start;
+    flex-direction: column;
     height: 100%;
     position: fixed;
     top: 0;
@@ -51,10 +53,13 @@
       margin: 5rem 0 0 0;
     }
   }
+
+  .select-button {
+    min-width: 11rem;
+  }
 }
 
 @media (min-width: 768px) {
-
   #menu-sidebar {
     display: none;
   }
