--- a/src/app/shared/components/menu-sidebar/menu-sidebar.component.scss
+++ b/src/app/shared/components/menu-sidebar/menu-sidebar.component.scss
@@ -40,6 +40,7 @@
     top: 0;
     animation-duration: 500ms;
     overflow: hidden;
+    min-width: 17rem;
 
     &.in {
       animation-name: enterleft;
@@ -53,10 +54,14 @@
       margin: 5rem 0 0 0;
     }
   }
+}
 
-  .select-button {
-    min-width: 11rem;
-  }
+.menu--theme-container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
