--- a/src/app/pages/device-options/device-icon/device-icon.component.scss
+++ b/src/app/pages/device-options/device-icon/device-icon.component.scss
@@ -22,6 +22,8 @@
   .icon-form-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    width: 90%;
 
     .title {
       margin: 0 0 1rem 0;
@@ -32,6 +34,7 @@
       justify-content: center;
       border-radius: 0.5rem;
       margin: 0 auto;
+      width: 100%;
 
       .icon-form:focus-within {
         outline: none;
