--- a/src/app/pages/device-options/name/name.component.scss
+++ b/src/app/pages/device-options/name/name.component.scss
@@ -2,38 +2,57 @@
 
 @include nb-install-component() {
 
+  .icon-container {
+    .title {
+    font-size: nb-theme(text-heading-6-font-size);
+  }
+
   .name-form:focus-within {
     border-color: nb-theme(input-basic-focus-border-color);
     box-shadow: 0 0 0 0.375rem nb-theme(color-basic-700);
   }
+  }
 }
 
-.name-form-container {
+.icon-container {
   display: flex;
   justify-content: center;
 
-  .name-form {
+  .name-form-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    border-radius: 0.5rem;
+    width: 90%;
 
-    .name-form:focus-within {
-      outline: none;
+    .title {
+      margin: 0 0 1rem 0;
     }
 
-    .name-input {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-    }
+    .name-form {
+      display: flex;
+      justify-content: center;
+      border-radius: 0.5rem;
+      margin: 0 auto;
+      
 
-    .name-btn {
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
+      .name-form:focus-within {
+        outline: none;
+      }
 
-    .name-input:focus, .name-btn:focus {
-      border-color: none;
-      box-shadow: none;
+      .name-input {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+
+      .name-btn {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+
+      .name-input:focus, .name-btn:focus {
+        border-color: none;
+        box-shadow: none;
+      }
     }
   }
 }
