--- a/src/app/shared/components/status-card/status-card.component.scss
+++ b/src/app/shared/components/status-card/status-card.component.scss
@@ -151,7 +151,8 @@ nb-card {
   }
 
   .status {
-    font-size: 1rem;
+    margin: .8rem 0 0 0;
+    font-size: 1.5rem;
     text-transform: uppercase;
   }
 
